# Uomi-Auto-Bot

./: .env  Cargo.toml  README.md
src/: app.rs  chain.rs  constants.rs  main.rs  ui.rs
